Changes background of html to make layout shift on mobile less noticable for fixed background.

--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -49,7 +49,7 @@
 
 html {
     scroll-behavior: smooth;
-    background: #122;
+    background: #101e1e;
     color: #fff;
     font-size: 18px;
     font-family: sans-serif;
